    ``get_transforms()`` method.

* docutils/core.py:

  - Added ``publish_doctree`` and ``publish_from_doctree`` convenience
    functions, for document tree extraction and reprocessing.

* docutils/io.py:

  - Added ``DocTreeInput`` class, for reprocessing existing documents.
  - Added support for non-Unicode (e.g. binary) writer output.

* docutils/nodes.py:

  - Added ``serial_escape`` function; escapes string values that are
    elements of a list, for serialization.  Modified Docutils-XML
    writing (``Element._dom_node``) and pseudo-XML writing
    (``Element.starttag``) to use ``serial_escape``.
  - Added ``Node.deepcopy()`` method.
  - Removed the internal lists ``document.substitution_refs``,
    ``document.anonymous_refs``, and ``document.anonymous_targets``.
  - Added a "container" element.

* docutils/statemachine.py:

  - Added trailing whitespace stripping to ``string2lines()``.
  - Added ``StringList.pad_double_width()`` & ``.replace()`` for East
    Asian double-width character support.

* docutils/utils.py:

  - Added ``east_asian_column_width()`` for double-width character
    support.

* docutils/languages/ja.py: Added to project: Japanese mappings by
  Hisashi Morita.

* docutils/languages/zh_cn.py: Added to project: Simplified Chinese
  mappings by Panjunyong.

* docutils/parsers/null.py: Added to project; a do-nothing parser.

* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.
  - Fixed bug with enumerated lists (SF#1254145).
  - Backslash-escaped colons inside of field names are now allowed.
  - Targets (implicit and explicit), anonymous hyperlink references
    and auto-numbered footnote references inside of substitution
    definitions are now disallowed.
  - Fixed bug: list items with blank first lines.