@@ -39,6 +39,8 @@ Changes Since 0.3.9
 
 * docutils/nodes.py:
 
+  - Re-introduced ``Targetable.indirect_reference_name``, for
+    MoinMoin/reST compatibility (removed in r3124/r3129).
   - Added ``serial_escape`` function; escapes string values that are
     elements of a list, for serialization.  Modified Docutils-XML
     writing (``Element._dom_node``) and pseudo-XML writing
@@ -100,6 +102,8 @@ Changes Since 0.3.9
 
 * docutils/parsers/rst/directives/images.py:
 
+  - Added ``indirect_reference_name`` support for images with a target
+    option.
   - Added support for image width and height units.
   - Fixed bug with image "target" options.
 
